--- a/renda.html
+++ b/renda.html
@@ -6,7 +6,7 @@
 <body>
   <h2>Aumento da renda em 2024</h2>
 
-  <p>Insira o valor da renda atual:</p>
+  <p>Insira o valor da sua renda atual:</p>
   <input type="number" id="renda-atual" />
 
   <button onclick="calcular()">Calcular</button>
