--- a/apoiosrendas2024.html
+++ b/apoiosrendas2024.html
@@ -40,7 +40,7 @@
       const rendimentoLiquido = parseFloat(document.getElementById("rendimento-liquido").value);
       
       if (isNaN(rendaAtual) || isNaN(rendimentoLiquido)) {
-        document.getElementById("resultado").innerHTML = "Insira por favor ambos os valores (renda e salário)";
+        document.getElementById("resultado").innerHTML = "</br><i><span style='color:#FB2F03'>preencha por favor ambos os valores (renda e salário)</i></span>";
         return;
       }
 
