--- a/apoiosrendas2024.html
+++ b/apoiosrendas2024.html
@@ -26,7 +26,7 @@
   <p>Insira o valor da sua renda atual</p>
   <input type="number" id="renda-atual" />
 
-  <p>Insira o salário líquido do seu agregado</p>
+  <p>Insira o salário líquido mensal do seu agregado</p>
   <input type="number" id="rendimento-liquido" />
 
   <button onclick="calcular()">Calcular</button>
