--- a/apoiosrendas2024.html
+++ b/apoiosrendas2024.html
@@ -21,7 +21,7 @@
   </style>
 </head>
 <body>
-  <H2>RENDAS 2024 (AUMENTOS E APOIOS)</H2>
+  <H2>SIMULADOR DE RENDAS 2024 (AUMENTOS E APOIOS)</H2>
 <p><span style="font-size:0.9em;font-style:italic">Nota do editor: o simulador faz os cálculos para o aumento máximo de 6,94% e inclui os apoios anunciados pelo Governo, aos quais acedem os agregados que auferem até 38.632 euros anuais de rendimento coletável e têm uma taxa de esforço superior a 35% no pagamento da renda - este apoio tem um limite máximo de 200 euros mensais em 2023, que se mantém em 2024 e ao quais acrescem até 4,94% de apoio-extra anunciado pelo Governo. O simulador que se segue incorpora todos estes cálculos - basta inserir o vencimento mensal bruto do seu agregado (se arrendar sozinha/o basta inserir o seu vencimento bruto) e o valor da renda - depois o simulador trata de tudo por si. Os valores são meramente indicativos, têm por base a informação conhecida e não dispensam a consulta das instituições públicas</span></p></br></br>
   
 
