--- a/apoiosrendas2024.html
+++ b/apoiosrendas2024.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-PT">
+<meta charset="UTF-8">
 <head>
   <title>Aumento da renda em 2024</title>
   <style>
@@ -18,10 +19,15 @@
     .medium-font {
       font-size: 0.9em;
     }
+
+  img {
+  max-width: 4%;
+  height: auto;
+  }
   </style>
 </head>
 <body>
-  <H2>SIMULADOR DE RENDAS 2024 (AUMENTOS E APOIOS)</H2>
+  <H2>SIMULADOR DE RENDAS 2024 <A HREF="https://cnnportugal.iol.pt">(CNN PORTUGAL)</A></H2>
   
 
   <p>Insira em baixo o valor da sua renda atual (digite só o número)</p>
