--- a/apoiosrendas2024.html
+++ b/apoiosrendas2024.html
@@ -27,7 +27,7 @@
   </style>
 </head>
 <body>
-  <H2>SIMULADOR DE RENDAS 2024 <A HREF="https://cnnportugal.iol.pt">(CNN PORTUGAL)</A></H2>
+  <h3>SIMULADOR DE RENDAS 2024 <A HREF="https://cnnportugal.iol.pt">(CNN PORTUGAL)</A></H3>
   
 
   <p>Insira em baixo o valor da sua renda atual (digite só o número)</p>
