--- a/ataque710.html
+++ b/ataque710.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
+            background-color: #ffffff;
         }
 
         .container {
