--- a/ataque710.html
+++ b/ataque710.html
@@ -68,9 +68,9 @@
 <body>
     <div class="container">
         
-<a href="https://cnnportugal.iol.pt/gaza/modalidades/basquetebol-motivos-de-seguranca-adiam-jogo-entre-turcos-e-israelitas" target="_blank" class="box">
-            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/63669b360cf2ea367d57134e/1024.jpg" alt="">
-            <h2>Basquetebol: «motivos de segurança» adiam jogo entre turcos e israelitas</h2>
+<a href="https://cnnportugal.iol.pt/guerra/gaza/ministros-comandantes-e-forcas-especiais-quem-sao-os-12-altos-responsaveis-do-hamas-que-israel-ja-eliminou/20231020/653181c3d34e371fc0b8e730" target="_blank" class="box">
+            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/652dbe9fd34e65afa2f67a09/" alt="">
+            <h2>"Ali Qadi liderou o massacre bárbaro e desumano de civis em Israel a 7 de outubro. Acabamos de eliminá-lo": os 12 líderes do Hamas que Israel matou em 12 dias</h2>
         </a>
 
 <a href="https://cnnportugal.iol.pt/israel/hamas/em-gaza-desenha-se-uma-catastrofe-humanitaria-israel-avisa-que-saida-da-populacao-e-urgente/20231029/653ecec8d34e371fc0b94453" target="_blank" class="box">
