--- a/ataque710.html
+++ b/ataque710.html
@@ -13,6 +13,10 @@
             background-color: #ffffff;
         }
 
+        h2{
+        font-size:1em;
+        }
+
         .container {
             display: flex;
             flex-wrap: wrap;
