--- a/ataque710.html
+++ b/ataque710.html
@@ -13,7 +13,7 @@
             background-color: #ffffff;
         }
 
-        h2{
+ h2{
         font-size:1em;
         }
 
@@ -72,38 +72,81 @@
 <body>
     <div class="container">
         
+<a href="https://cnnportugal.iol.pt/gaza/modalidades/basquetebol-motivos-de-seguranca-adiam-jogo-entre-turcos-e-israelitas" target="_blank" class="box">
+            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/63669b360cf2ea367d57134e/1024.jpg" alt="">
+            <h2>Basquetebol: «motivos de segurança» adiam jogo entre turcos e israelitas</h2>
+        </a>
+
+<a href="https://cnnportugal.iol.pt/dossier/temos-terroristas-a-atacar-pessoas-nao-precisamos-de-muita-motivacao-para-vestir-o-uniforme-pegar-numa-arma-e-fazer-o-que-temos-de-fazer/65327f7dd34e65afa2f6a0b5"_blank" class="box">
+            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/653953d6d34e65afa2f6d385/"">
+            <h2>"Temos terroristas a atacar pessoas. Não precisamos de muita motivação para vestir o uniforme, pegar numa arma e fazer o que temos de fazer"</h2>
+        </a>
+
 <a href="https://cnnportugal.iol.pt/guerra/gaza/ministros-comandantes-e-forcas-especiais-quem-sao-os-12-altos-responsaveis-do-hamas-que-israel-ja-eliminou/20231020/653181c3d34e371fc0b8e730" target="_blank" class="box">
             <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/652dbe9fd34e65afa2f67a09/" alt="">
             <h2>"Ali Qadi liderou o massacre bárbaro e desumano de civis em Israel a 7 de outubro. Acabamos de eliminá-lo": os 12 líderes do Hamas que Israel matou em 12 dias</h2>
         </a>
-
-<a href="https://cnnportugal.iol.pt/israel/hamas/em-gaza-desenha-se-uma-catastrofe-humanitaria-israel-avisa-que-saida-da-populacao-e-urgente/20231029/653ecec8d34e371fc0b94453" target="_blank" class="box">
-            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/653ecf2ad34e65afa2f6f7f8/1024.jpg" alt="">
-            <h2>Exemplo de título</h2>
+<a href="https://cnnportugal.iol.pt/hamas/irao/como-e-quem-financia-o-hamas-ha-criptomoedas-e-donativos-mas-irao-e-catar-com-a-ajuda-de-israel-sao-os-principais-financiadores/20231021/65300e83d34e371fc0b8d984" target="_blank" class="box">
+            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/652d8f8bd34e371fc0b8c4a8/1024.jpg" alt="">
+            <h2>Como e quem financia o Hamas? Há criptomoedas e donativos. Mas Irão e Catar (com a ajuda de Israel) são os principais financiadores</h2>
         </a>
 
-<a href="https://cnnportugal.iol.pt/israel/hamas/em-gaza-desenha-se-uma-catastrofe-humanitaria-israel-avisa-que-saida-da-populacao-e-urgente/20231029/653ecec8d34e371fc0b94453" target="_blank" class="box">
-            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/653ecf2ad34e65afa2f6f7f8/1024.jpg" alt="">
-            <h2>Exemplo de título</h2>
+<a href="https://cnnportugal.iol.pt/guerra/israel/um-dono-de-um-cafe-e-uma-estrela-da-alta-financa-os-homens-a-frente-das-secretas-israelitas-e-as-megaoperacoes-que-lideraram/20231015/65292eb1d34e371fc0b8a990"_blank" class="box">
+            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/65292e94d34e65afa2f65d3e/1024.jpg" alt="">
+            <h2>Um dono de um café e uma estrela da alta finança. Os homens à frente das secretas israelitas e as megaoperações que lideraram</h2>
         </a>
 
-<a href="https://cnnportugal.iol.pt/israel/hamas/em-gaza-desenha-se-uma-catastrofe-humanitaria-israel-avisa-que-saida-da-populacao-e-urgente/20231029/653ecec8d34e371fc0b94453" target="_blank" class="box">
-            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/653ecf2ad34e65afa2f6f7f8/1024.jpg" alt="">
-            <h2>Exemplo de título</h2>
+<a href="https://cnnportugal.iol.pt/guerra/israel/hamas-tem-uma-segunda-cidade-subterranea-que-anula-a-vantagem-tecnologica-de-israel/20231017/652d8576d34e65afa2f677b8" target="_blank" class="box">
+            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/652d7a90d34e65afa2f67739/1024.jpg" alt="">
+            <h2>Hamas tem "uma segunda cidade subterrânea" que "anula a vantagem tecnológica" de Israel</h2>
         </a>
 
-<a href="https://cnnportugal.iol.pt/israel/hamas/em-gaza-desenha-se-uma-catastrofe-humanitaria-israel-avisa-que-saida-da-populacao-e-urgente/20231029/653ecec8d34e371fc0b94453" target="_blank" class="box">
-            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/653ecf2ad34e65afa2f6f7f8/1024.jpg" alt="">
-            <h2>Exemplo de título</h2>
+<a href="https://cnnportugal.iol.pt/guerra/israel/hamas-tem-uma-segunda-cidade-subterranea-que-anula-a-vantagem-tecnologica-de-israel/20231017/652d8576d34e65afa2f677b8" target="_blank" class="box">
+            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/652d7a90d34e65afa2f67739/1024.jpg" alt="">
+            <h2>Hamas tem "uma segunda cidade subterrânea" que "anula a vantagem tecnológica" de Israel</h2>
         </a>
 
-<a href="https://cnnportugal.iol.pt/israel/hamas/em-gaza-desenha-se-uma-catastrofe-humanitaria-israel-avisa-que-saida-da-populacao-e-urgente/20231029/653ecec8d34e371fc0b94453" target="_blank" class="box">
-            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/653ecf2ad34e65afa2f6f7f8/1024.jpg" alt="">
-            <h2>Exemplo de título</h2>
+
+     <a href="https://cnnportugal.iol.pt/faixa-de-gaza/medio-oriente/faixa-de-gaza-e-ligeiramente-mais-pequeno-do-que-o-municipio-do-redondo-em-evora-mas-com-milhoes-de-habitantes/20231014/65294d29d34e371fc0b8aba3"_blank" class="box">
+            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/6529504fd34e65afa2f65fae/1024.jpg" alt="">
+            <h2>Faixa de Gaza. "É ligeiramente mais pequeno do que o município do Redondo, em Évora" mas com milhões de habitantes</h2>
         </a>
 
-     
+<a href="https://cnnportugal.iol.pt/guerra/israel/como-e-que-o-hamas-obtem-as-suas-armas-com-uma-mistura-de-ingenuidade-de-engenho-e-um-mentor-estrangeiro/20231012/6527bac8d34e371fc0b89cc6"_blank" class="box">
+            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/6527c577d34e371fc0b89df8/1024.jpg" alt="">
+            <h2>Como é que o Hamas obtém as suas armas? Com uma mistura de ingenuidade, de engenho e de um mentor estrangeiro</h2>
+        </a>
 
+<a href="https://cnnportugal.iol.pt/guerra/israel/decapitar-o-hamas-implica-substituir-a-lideranca-quem-governara-gaza-se-israel-ganhar-a-guerra/20231025/6537f5e7d34e371fc0b913d2" target="_blank" class="box">
+            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/6537f0b3d34e65afa2f6c777/1024.jpg" alt="">
+            <h2>"Decapitar o Hamas implica substituir a liderança": quem governará Gaza se Israel ganhar a guerra?</h2>
+        </a>
+
+<a href="https://cnnportugal.iol.pt/guerra/israel/contra-a-ucrania-mas-a-favor-de-israel-a-favor-da-ucrania-mas-contra-israel-as-duas-guerras-provam-que-o-mundo-deixou-de-ter-um-so-lider/20231022/65326867d34e371fc0b8ec64" target="_blank" class="box">
+            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/6532a307d34e65afa2f6a3ec/1024.jpg" alt="">
+            <h2>"Contra a Ucrânia, mas a favor de Israel. A favor da Ucrânia, mas contra Israel. As duas guerras provam que o mundo deixou de ter um só líder</h2>
+        </a>
+
+
+     <a href="https://cnnportugal.iol.pt/guerra/israel/guerra-no-medio-oriente-pode-catapultar-a-extrema-direita-na-europa-e-um-gatilho-quase-automatico/20231023/6532b6ccd34e371fc0b8f1a6" target="_blank" class="box">
+            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/652d5a26d34e371fc0b8c277/" alt="">
+            <h2>"O caso do Médio Oriente é oposto ao da Ucrânia: todos os partidos de extrema-direita conseguem juntar-se numa mesma perspetiva" sobre Israel / Hamas - e isso pode ter repercussões nunca vistas</h2>
+        </a>
+
+<a href="https://cnnportugal.iol.pt/guerra/israel/hamas-retirou-ensinamentos-do-conflito-na-ucrania-como-a-tecnologia-mudou-completamente-a-guerra/20231014/65281e5bd34e65afa2f65717" target="_blank" class="box">
+            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/6526e100d34e65afa2f64d92/1024.jpg" alt="">
+            <h2>Hamas "retirou ensinamentos do conflito na Ucrânia". Como a tecnologia "mudou completamente" a guerra</h2>
+        </a>
+
+<a href="https://cnnportugal.iol.pt/guerra/israel/nao-sao-pro-palestina-sao-contra-o-ocidente-quem-esta-por-detras-da-guerra-silenciosa-contra-israel-na-dark-web/20231026/653ab73dd34e65afa2f6e01b" target="_blank" class="box">
+            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/627d1c340cf2ea4f0a49e791/1024.jpg" alt="">
+            <h2>"Não são pró-Palestina, são contra o Ocidente". Quem está por detrás da guerra silenciosa contra Israel na dark web?</h2>
+        </a>
+
+<a href="https://cnnportugal.iol.pt/guerra/israel/porque-nao-ha-nem-nunca-houve-capacetes-azuis-em-gaza/20231009/65242c46d34e371fc0b883c7" target="_blank" class="box">
+            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/604bf30f0cf26952d6ba7781/" alt="">
+            <h2>Porque não há (nem nunca houve) capacetes azuis em Gaza?</h2>
+        </a>
 
 
     </div>
