--- a/ataque710.html
+++ b/ataque710.html
@@ -72,9 +72,9 @@
 <body>
     <div class="container">
         
-<a href="https://cnnportugal.iol.pt/gaza/modalidades/basquetebol-motivos-de-seguranca-adiam-jogo-entre-turcos-e-israelitas" target="_blank" class="box">
-            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/63669b360cf2ea367d57134e/1024.jpg" alt="">
-            <h2>Basquetebol: «motivos de segurança» adiam jogo entre turcos e israelitas</h2>
+<a href="https://cnnportugal.iol.pt/_preview/artigo/65493c2cd34e65afa2f74334" target="_blank" class="box">
+            <img src="https://www.iol.pt/multimedia/oratvi/multimedia/imagem/id/65268672d34e371fc0b894e0/1024.jpg" alt="">
+            <h2>Quinze pessoas perdem a vida a cada hora. Um mês depois do ataque do Hamas a Israel, vive-se o inferno em Gaza</h2>
         </a>
 
 <a href="https://cnnportugal.iol.pt/dossier/temos-terroristas-a-atacar-pessoas-nao-precisamos-de-muita-motivacao-para-vestir-o-uniforme-pegar-numa-arma-e-fazer-o-que-temos-de-fazer/65327f7dd34e65afa2f6a0b5"_blank" class="box">
