--- a/mapacnn.html
+++ b/mapacnn.html
@@ -68,64 +68,64 @@
 <div></div>
 		<img id="g-ai2html-graphic-mobile375-img" class="g-ai2html-graphic-mobile375-img g-aiImg" alt="" src="https://ix.cnn.io/dailygraphics/graphics/20231102-middle-east-locator/static/media/ai2html-graphic-mobile375.76ff9f99.png"/>
 		<div id="g-ai1-1" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:5.2548%;margin-top:-7.2px;left:23.5994%;margin-left:-33px;width:66px">
-			<p class="g-pstyle0">turkey</p>
+			<p class="g-pstyle0">Turquia</p>
 		</div>
 		<div id="g-ai1-2" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:17.7025%;margin-top:-7.2px;left:27.5581%;margin-left:-27px;width:54px">
-			<p class="g-pstyle0">SYRIA</p>
+			<p class="g-pstyle0">Síria</p>
 		</div>
 		<div id="g-ai1-3" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:20.192%;margin-top:-7.2px;left:11.7815%;margin-left:-38px;width:76px">
-			<p class="g-pstyle0">lebanon</p>
+			<p class="g-pstyle0">Líbano</p>
 		</div>
 		<div id="g-ai1-4" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:23.8132%;margin-top:-7.2px;left:42.4444%;margin-left:-24px;width:48px">
-			<p class="g-pstyle0">IRAQ</p>
+			<p class="g-pstyle0">Iraque</p>
 		</div>
 		<div id="g-ai1-5" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:24.6053%;margin-top:-7.7px;left:10.0445%;margin-left:-31.5px;width:63px">
-			<p class="g-pstyle1">ISRAEL</p>
+			<p class="g-pstyle1">Israel</p>
 		</div>
 		<div id="g-ai1-6" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:24.4922%;margin-top:-7.2px;left:74.6574%;margin-left:-24px;width:48px">
-			<p class="g-pstyle0">Iran</p>
+			<p class="g-pstyle0">Irão</p>
 		</div>
 		<div id="g-ai1-7" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:27.3842%;margin-top:-7px;left:9.333%;margin-left:-24px;width:48px">
-			<p class="g-pstyle2">GAZA</p>
+			<p class="g-pstyle2">Gaza</p>
 		</div>
 		<div id="g-ai1-8" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:27.8368%;margin-top:-7px;left:23.3093%;margin-left:-31px;width:62px">
-			<p class="g-pstyle2">W. Bank</p>
+			<p class="g-pstyle2">Cisjordânia</p>
 		</div>
 		<div id="g-ai1-9" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:32.1871%;margin-top:-7.2px;left:20.2751%;margin-left:-27.5px;width:55px">
-			<p class="g-pstyle3">jord.</p>
+			<p class="g-pstyle3">Jordânia</p>
 		</div>
 		<div id="g-ai1-10" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:48.4823%;margin-top:-7.2px;left:72.7873%;margin-left:-29.5px;width:59px">
-			<p class="g-pstyle0">Qatar</p>
+			<p class="g-pstyle0">Catar</p>
 		</div>
 		<div id="g-ai1-11" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:50.2928%;margin-top:-7.2px;left:7.0354%;margin-left:-29px;width:58px">
-			<p class="g-pstyle0">EGYPT</p>
+			<p class="g-pstyle0">Egito</p>
 		</div>
 		<div id="g-ai1-12" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:54.1403%;margin-top:-13.2px;left:46.8772%;margin-left:-31.5px;width:63px">
-			<p class="g-pstyle0">SAUDI</p>
-			<p class="g-pstyle0">ARABIA</p>
+			<p class="g-pstyle0">Arábia</p>
+			<p class="g-pstyle0">Saudita</p>
 		</div>
 		<div id="g-ai1-13" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:54.3666%;margin-top:-7.2px;left:79.4656%;margin-left:-22px;width:44px">
-			<p class="g-pstyle0">UAE</p>
+			<p class="g-pstyle0">Emirados Árabes Unidos</p>
 		</div>
 		<div id="g-ai1-14" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:59.3457%;margin-top:-7.2px;left:92.0836%;margin-left:-28px;width:56px">
-			<p class="g-pstyle0">oman</p>
+			<p class="g-pstyle0">Omã</p>
 		</div>
 		<div id="g-ai1-15" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:68.6249%;margin-top:-7.2px;left:9.6069%;margin-left:-30.5px;width:61px">
-			<p class="g-pstyle0">SUDAN</p>
+			<p class="g-pstyle0">Sudão</p>
 		</div>
 		<div id="g-ai1-16" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:72.0448%;margin-top:-13.3px;left:29.3815%;margin-left:-24px;width:48px">
-			<p class="g-pstyle4">Red</p>
-			<p class="g-pstyle4"> Sea</p>
+			<p class="g-pstyle4">Mar</p>
+			<p class="g-pstyle4"> Vermelho</p>
 		</div>
 		<div id="g-ai1-17" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:80.8463%;margin-top:-7.2px;left:25.7676%;margin-left:-34.5px;width:69px">
-			<p class="g-pstyle0">eritrea</p>
+			<p class="g-pstyle0">Eritreia</p>
 		</div>
 		<div id="g-ai1-18" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:81.9779%;margin-top:-7.2px;left:55.9444%;margin-left:-30.5px;width:61px">
-			<p class="g-pstyle0">Yemen</p>
+			<p class="g-pstyle0">Iémia</p>
 		</div>
 		<div id="g-ai1-19" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:84.4925%;margin-top:-13.3px;left:86.8362%;margin-left:-34px;width:68px">
-			<p class="g-pstyle4">Arabian</p>
-			<p class="g-pstyle4">Sea</p>
+			<p class="g-pstyle4">Mar</p>
+			<p class="g-pstyle4">Arábico</p>
 		</div>
 	</div>
 
