--- a/mapacnn.html
+++ b/mapacnn.html
@@ -134,68 +134,68 @@
 <div></div>
 		<img id="g-ai2html-graphic-desktop-img" class="g-ai2html-graphic-desktop-img g-aiImg" alt="" src="https://ix.cnn.io/dailygraphics/graphics/20231102-middle-east-locator/static/media/ai2html-graphic-desktop.b90f4dd3.jpg"/>
 		<div id="g-ai2-1" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:3.0591%;margin-top:-8.9px;left:31.74%;margin-left:-37px;width:74px">
-			<p class="g-pstyle0">turkey</p>
+			<p class="g-pstyle0">Turquia</p>
 		</div>
 		<div id="g-ai2-2" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:13.9723%;margin-top:-8.9px;left:36.2933%;margin-left:-30px;width:60px">
-			<p class="g-pstyle0">SYRIA</p>
+			<p class="g-pstyle0">Síria</p>
 		</div>
 		<div id="g-ai2-3" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:16.0848%;margin-top:-15.3px;left:10.9868%;margin-left:-54px;width:108px">
-			<p class="g-pstyle1">Mediterranean</p>
-			<p class="g-pstyle1">Sea</p>
+			<p class="g-pstyle1">Mar</p>
+			<p class="g-pstyle1">Mediterrâneo</p>
 		</div>
 		<div id="g-ai2-4" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:17.0416%;margin-top:-8.9px;left:25.1489%;margin-left:-42.5px;width:85px">
-			<p class="g-pstyle0">lebanon</p>
+			<p class="g-pstyle0">Líbano</p>
 		</div>
 		<div id="g-ai2-5" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:20.6225%;margin-top:-8.9px;left:46.8381%;margin-left:-26.5px;width:53px">
-			<p class="g-pstyle0">IRAQ</p>
+			<p class="g-pstyle0">Iraque</p>
 		</div>
 		<div id="g-ai2-6" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:21.6645%;margin-top:-10.1px;left:23.9289%;margin-left:-37px;width:74px">
 			<p class="g-pstyle2">ISRAEL</p>
 		</div>
 		<div id="g-ai2-7" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:23.8624%;margin-top:-8.9px;left:73.0952%;margin-left:-26.5px;width:53px">
-			<p class="g-pstyle0">Iran</p>
+			<p class="g-pstyle0">Irão</p>
 		</div>
 		<div id="g-ai2-8" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:24.1656%;margin-top:-8.7px;left:32.3063%;margin-left:-35.5px;width:71px">
-			<p class="g-pstyle3">W. Bank</p>
+			<p class="g-pstyle3">Cisjordânia</p>
 		</div>
 		<div id="g-ai2-9" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:24.6772%;margin-top:-8.7px;left:23.203%;margin-left:-26.5px;width:53px">
 			<p class="g-pstyle3">GAZA</p>
 		</div>
 		<div id="g-ai2-10" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:29.4894%;margin-top:-8.9px;left:30.7047%;margin-left:-31px;width:62px">
-			<p class="g-pstyle0">jord.</p>
+			<p class="g-pstyle0">Jordânoa</p>
 		</div>
 		<div id="g-ai2-11" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:41.0848%;margin-top:-8.9px;left:12.7865%;margin-left:-32px;width:64px">
-			<p class="g-pstyle0">EGYPT</p>
+			<p class="g-pstyle0">EGITO</p>
 		</div>
 		<div id="g-ai2-12" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:48.4171%;margin-top:-8.9px;left:67.6636%;margin-left:-32.5px;width:65px">
-			<p class="g-pstyle0">Qatar</p>
+			<p class="g-pstyle0">catar</p>
 		</div>
 		<div id="g-ai2-13" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:54.4705%;margin-top:-16.4px;left:50.0415%;margin-left:-35.5px;width:71px">
-			<p class="g-pstyle0">SAUDI</p>
-			<p class="g-pstyle0">ARABIA</p>
+			<p class="g-pstyle0">ARÁBIA</p>
+			<p class="g-pstyle0">SAUDITA</p>
 		</div>
 		<div id="g-ai2-14" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:55.2379%;margin-top:-8.9px;left:73.4982%;margin-left:-24px;width:48px">
-			<p class="g-pstyle0">UAE</p>
+			<p class="g-pstyle0">EAU</p>
 		</div>
 		<div id="g-ai2-15" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:60.6945%;margin-top:-8.9px;left:82.5746%;margin-left:-31px;width:62px">
-			<p class="g-pstyle0">oman</p>
+			<p class="g-pstyle0">Omã</p>
 		</div>
 		<div id="g-ai2-16" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:73.2087%;margin-top:-15.3px;left:36.8259%;margin-left:-22.5px;width:45px">
-			<p class="g-pstyle1">Red</p>
-			<p class="g-pstyle1">Sea</p>
+			<p class="g-pstyle1">Mar</p>
+			<p class="g-pstyle1">Vermelho</p>
 		</div>
 		<div id="g-ai2-17" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:78.4284%;margin-top:-8.9px;left:14.6969%;margin-left:-34px;width:68px">
-			<p class="g-pstyle0">SUDAN</p>
+			<p class="g-pstyle0">Sudão</p>
 		</div>
 		<div id="g-ai2-18" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:84.9081%;margin-top:-8.9px;left:33.981%;margin-left:-38.5px;width:77px">
-			<p class="g-pstyle0">eritrea</p>
+			<p class="g-pstyle0">Eritreia</p>
 		</div>
 		<div id="g-ai2-19" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:87.0206%;margin-top:-15.3px;left:89.7254%;margin-left:-34px;width:68px">
-			<p class="g-pstyle1">Arabian</p>
-			<p class="g-pstyle1">Sea</p>
+			<p class="g-pstyle1">Mar</p>
+			<p class="g-pstyle1">Arábico</p>
 		</div>
 		<div id="g-ai2-20" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:86.2723%;margin-top:-8.9px;left:56.5313%;margin-left:-34px;width:68px">
-			<p class="g-pstyle0">Yemen</p>
+			<p class="g-pstyle0">Iémen</p>
 		</div>
 	</div>
 
