--- a/mapacnn.html
+++ b/mapacnn.html
@@ -105,7 +105,7 @@
 			<p class="g-pstyle0">Saudita</p>
 		</div>
 		<div id="g-ai1-13" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:54.3666%;margin-top:-7.2px;left:79.4656%;margin-left:-22px;width:44px">
-			<p class="g-pstyle0">Emirados Árabes Unidos</p>
+			<p class="g-pstyle0">EÁU</p>
 		</div>
 		<div id="g-ai1-14" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:59.3457%;margin-top:-7.2px;left:92.0836%;margin-left:-28px;width:56px">
 			<p class="g-pstyle0">Omã</p>
@@ -121,7 +121,7 @@
 			<p class="g-pstyle0">Eritreia</p>
 		</div>
 		<div id="g-ai1-18" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:81.9779%;margin-top:-7.2px;left:55.9444%;margin-left:-30.5px;width:61px">
-			<p class="g-pstyle0">Iémia</p>
+			<p class="g-pstyle0">Iémen</p>
 		</div>
 		<div id="g-ai1-19" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:84.4925%;margin-top:-13.3px;left:86.8362%;margin-left:-34px;width:68px">
 			<p class="g-pstyle4">Mar</p>
