--- a/mapacnn.html
+++ b/mapacnn.html
@@ -162,7 +162,7 @@
 			<p class="g-pstyle3">GAZA</p>
 		</div>
 		<div id="g-ai2-10" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:29.4894%;margin-top:-8.9px;left:30.7047%;margin-left:-31px;width:62px">
-			<p class="g-pstyle0">Jordânoa</p>
+			<p class="g-pstyle0">Jordânia</p>
 		</div>
 		<div id="g-ai2-11" class="g-Layer_6 g-aiAbs g-aiPointText" style="top:41.0848%;margin-top:-8.9px;left:12.7865%;margin-left:-32px;width:64px">
 			<p class="g-pstyle0">EGITO</p>
