--- a/iowa.html
+++ b/iowa.html
@@ -174,7 +174,7 @@
 <div></div>
 		<img id="g-ai2html-graphic-desktop-img" class="g-ai2html-graphic-desktop-img g-aiImg" alt="" src="./static/media/ai2html-graphic-desktop.860d2229.png"/>
 		<div id="g-ai2-1" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:14.2039%;margin-top:-10.1px;left:76.3382%;margin-left:-21px;width:42px">
-			<p class="g-pstyle0">US</p>
+			<p class="g-pstyle0">Estados Unidos</p>
 		</div>
 		<div id="g-ai2-2" class="g-text-shadow g-aiAbs g-aiPointText" style="top:18.1265%;margin-top:-8.3px;left:21.4864%;width:138px">
 			<p class="g-pstyle1">John MacVicar Freeway</p>
@@ -193,7 +193,7 @@
 			<p class="g-pstyle5">42nd Street</p>
 		</div>
 		<div id="g-ai2-7" class="g-text-shadow g-aiAbs" style="top:46.2706%;left:27.4604%;width:25.2564%">
-			<p class="g-pstyle6">A few minutes before 6 a.m., Johnny Gosch leaves home to deliver his newspapers.</p>
+			<p class="g-pstyle6">Poucos minutos antes das seis da manhã, Johnny Gosch sai de casa para entregar os seus jornais.</p>
 		</div>
 		<div id="g-ai2-8" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:62.738%;margin-top:-8.3px;left:40.5398%;width:94px">
 			<p class="g-pstyle1">Marcourt Lane</p>
@@ -208,7 +208,7 @@
 			<p class="g-pstyle7">1</p>
 		</div>
 		<div id="g-ai2-12" class="g-text-shadow g-aiAbs g-aiPointText" style="top:69.2822%;margin-top:-7.8px;left:21.1868%;width:149px">
-			<p class="g-pstyle8">Johnny Gosch&rsquo;s home</p>
+			<p class="g-pstyle8">Casa de Johnny Gosch&rsquo;s </p>
 		</div>
 		<div id="g-ai2-13" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:73.2457%;margin-top:-8.3px;left:54.6397%;width:98px">
 			<p class="g-pstyle1">Ashworth Road</p>
@@ -237,8 +237,8 @@
 
         <div id="footer">
             <p class="footnote">  </p>
-            <p class="source">Fonte: Depoimentos de testemunhas citados num relatório da polícia de West Des Moines</p>
-            <p class="credit">Grafismo: Rachel Wilson, CNN</p>
+            <h4 class>Fonte: Depoimentos de testemunhas citados num relatório da polícia de West Des Moines</p>
+            <h4 class>Grafismo: Rachel Wilson, CNN</p>
         </div>
 
     </div>
