--- a/iowa.html
+++ b/iowa.html
@@ -46,7 +46,7 @@
     <div id="root">
 
         <div id="meta">
-            <h1 class="headline">Key locations in the disappearance of Johnny Gosch on September 5, 1982</h1>
+            <h1 class="headline">Locais-chave do desaparecimento de Johnny Gosch a 5 de setembro de 1982</h1>
             <h2 class="subhed dek">  </h2>        
         </div>
 
@@ -237,8 +237,8 @@
 
         <div id="footer">
             <p class="footnote">  </p>
-            <h4 class>Fonte: Depoimentos de testemunhas citados num relatório da polícia de West Des Moines</p>
-            <h4 class>Grafismo: Rachel Wilson, CNN</p>
+            <h4 class>Fonte: Depoimentos de testemunhas citados num relatório da polícia de West Des Moines</br>
+            Grafismo: Rachel Wilson, CNN</p>
         </div>
 
     </div>
