--- a/iowa.html
+++ b/iowa.html
@@ -237,8 +237,8 @@
 
         <div id="footer">
             <p class="footnote">  </p>
-            <h4 class>Fonte: Depoimentos de testemunhas citados num relatório da polícia de West Des Moines</br>
-            Grafismo: Rachel Wilson, CNN</p>
+            <span style="font-size:9px">Fonte: Depoimentos de testemunhas citados num relatório da polícia de West Des Moines</br>
+            Grafismo: Rachel Wilson, CNN</span>
         </div>
 
     </div>
