--- a/iowa.html
+++ b/iowa.html
@@ -100,16 +100,16 @@
 			<p class="g-pstyle6">2</p>
 		</div>
 		<div id="g-ai0-13" class="g-text-shadow g-aiAbs" style="top:73.0361%;left:57.9157%;width:39.375%">
-			<p class="g-pstyle4">Some time after 7:45 a.m., Johnny&rsquo;s father finds his son&rsquo;s wagon, full of undelivered papers. Johnny is nowhere to be found.</p>
+			<p class="g-pstyle4">Pouco depois das 7:45, o pai de Johnny encontra a carrinha do filho cheia de jornais não entregues. Ninguém sabe onde está Johnny</p>
 		</div>
 		<div id="Near_the_newspaper_drop_site_multiple" class="g-text-shadow g-aiAbs" style="top:73.4256%;left:3.8519%;width:49.375%">
 			<p class="g-pstyle4">Around 6 a.m. near the newspaper drop site, multiple witnesses report seeing a strange man in a blue car stopping to ask for directions.</p>
 		</div>
 		<div id="g-ai0-15" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:93.5696%;margin-top:-6.4px;left:2.4724%;width:59px">
-			<p class="g-pstyle8">600 feet</p>
+			<p class="g-pstyle8">183 metros</p>
 		</div>
 		<div id="g-ai0-16" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:97.2701%;margin-top:-6.4px;left:2.4364%;width:72px">
-			<p class="g-pstyle8">200 meters</p>
+			<p class="g-pstyle8">200 metros</p>
 		</div>
 	</div>
 
@@ -156,16 +156,16 @@
 			<p class="g-pstyle7">Gosch&rsquo;s </p>
 		</div>
 		<div id="Near_the_newspaper_drop_site_multiple" class="g-text-shadow g-aiAbs" style="top:74.0512%;left:3.1157%;width:45.6%">
-			<p class="g-pstyle4">Around 6 a.m. near the newspaper drop site, multiple witnesses report seeing a strange man in a blue car stopping to ask for directions.</p>
+			<p class="g-pstyle4">Por volta das 6:00, perto do local de entrega dos jornais, várias testemunhas afirmam ter visto um homem estranho num carro azul a parar para pedir informações.</p>
 		</div>
 		<div id="g-ai1-14" class="g-text-shadow g-aiAbs" style="top:74.0512%;left:54.4252%;width:37.3333%">
-			<p class="g-pstyle4">Some time after 7:45 a.m., Johnny&rsquo;s father finds his son&rsquo;s wagon, full of undelivered papers. Johnny is nowhere to be found.</p>
+			<p class="g-pstyle4">Pouco depois das 7:45, o pai de Johnny encontra a carrinha do filho cheia de jornais não entregues. Ninguém sabe onde está Johnny</p>
 		</div>
 		<div id="g-ai1-15" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:93.3762%;margin-top:-6.4px;left:3.4453%;width:59px">
-			<p class="g-pstyle8">600 feet</p>
+			<p class="g-pstyle8">183 metros</p>
 		</div>
 		<div id="g-ai1-16" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:97.069%;margin-top:-6.4px;left:3.4146%;width:72px">
-			<p class="g-pstyle8">200 meters</p>
+			<p class="g-pstyle8">200 metros</p>
 		</div>
 	</div>
 
@@ -217,16 +217,16 @@
 			<p class="g-pstyle7">2</p>
 		</div>
 		<div id="Near_the_newspaper_drop_site_multiple" class="g-text-shadow g-aiAbs" style="top:79.084%;left:26.5429%;width:28.8462%">
-			<p class="g-pstyle6">Around 6 a.m. near the newspaper drop site, multiple witnesses report seeing a strange man in a blue car stopping to ask for directions.</p>
+			<p class="g-pstyle6">Por volta das 6:00, perto do local de entrega dos jornais, várias testemunhas afirmam ter visto um homem estranho num carro azul a parar para pedir informações.</p>
 		</div>
 		<div id="g-ai2-16" class="g-text-shadow g-aiAbs" style="top:79.2684%;left:59.236%;width:30.7692%">
-			<p class="g-pstyle6">Some time after 7:45 a.m., Johnny&rsquo;s father finds his son&rsquo;s wagon, full of undelivered papers. Johnny is nowhere to be found.</p>
+			<p class="g-pstyle6">Pouco depois das 7:45, o pai de Johnny encontra a carrinha do filho cheia de jornais não entregues. Ninguém sabe onde está Johnny</p>
 		</div>
 		<div id="g-ai2-17" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:92.4893%;margin-top:-7.7px;left:2.0199%;width:63px">
-			<p class="g-pstyle9">600 feet</p>
+			<p class="g-pstyle9">183 metros</p>
 		</div>
 		<div id="g-ai2-18" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:96.3605%;margin-top:-7.7px;left:2.0031%;width:79px">
-			<p class="g-pstyle9">200 meters</p>
+			<p class="g-pstyle9">200 metros</p>
 		</div>
 	</div>
 
@@ -237,7 +237,7 @@
 
         <div id="footer">
             <p class="footnote">  </p>
-            <span style="font-size:9px">Fonte: Depoimentos de testemunhas citados num relatório da polícia de West Des Moines</br>
+            <span style="font-size:10px;font-family:arial">Fonte: Depoimentos de testemunhas citados num relatório da polícia de West Des Moines</br>
             Grafismo: Rachel Wilson, CNN</span>
         </div>
 
