--- a/iowa.html
+++ b/iowa.html
@@ -40,7 +40,7 @@
     <link rel="apple-touch-icon" href="https://cdn.cnn.com/cnn/.e/img/3.0/global/misc/apple-touch-icon.png">
 
     <base target="_blank">
-  <link href="./static/css/main.css" rel="stylesheet"></head>
+  <link href="https://ix.cnn.io/dailygraphics/graphics/20231128-iowa-missing-person/static/css/main.css" rel="stylesheet"></head>
   
   <body>
     <div id="root">
@@ -237,8 +237,8 @@
 
         <div id="footer">
             <p class="footnote">  </p>
-            <span style="font-size:10px;font-family:arial">Fonte: Depoimentos de testemunhas citados num relatório da polícia de West Des Moines</br>
-            Grafismo: Rachel Wilson, CNN</span>
+            <p class="source">>Fonte: Depoimentos de testemunhas citados num relatório da polícia de West Des Moines</p>
+            <p class="credit">Grafismo: Rachel Wilson, CNN</p>
         </div>
 
     </div>
