--- a/iowa.html
+++ b/iowa.html
@@ -243,5 +243,5 @@
 
     </div>
 
-  <script type="text/javascript" src="./static/js/runtime.js"></script><script type="text/javascript" src="./static/js/vendors~main.chunk.js"></script><script type="text/javascript" src="./static/js/main.chunk.js"></script></body>
+  <script type="text/javascript" src="https://ix.cnn.io/dailygraphics/graphics/20231128-iowa-missing-person/static/js/runtime.js"></script><script type="text/javascript" src="https://ix.cnn.io/dailygraphics/graphics/20231128-iowa-missing-person/static/js/vendors~main.chunk.js"></script><script type="text/javascript" src="https://ix.cnn.io/dailygraphics/graphics/20231128-iowa-missing-person/static/js/main.chunk.js"></script></body>
 </html>
