--- a/iowa.html
+++ b/iowa.html
@@ -60,7 +60,7 @@
 	
 	<div id="g-ai2html-graphic-mobile320" class="g-artboard" style="max-width:320px;max-height:513px" data-aspect-ratio="0.623" data-min-width="0" data-max-width="374">
 <div style="padding:0 0 160.4516% 0"></div>
-		<img id="g-ai2html-graphic-mobile320-img" class="g-ai2html-graphic-mobile320-img g-aiImg" alt="" src="./static/media/ai2html-graphic-mobile320.16a58a1b.png"/>
+		<img id="g-ai2html-graphic-mobile320-img" class="g-ai2html-graphic-mobile320-img g-aiImg" alt="" src="https://ix.cnn.io/dailygraphics/graphics/20231128-iowa-missing-person/static/media/ai2html-graphic-mobile320.16a58a1b.png"/>
 		<div id="g-ai0-1" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:9.997%;margin-top:-8.3px;left:65.2362%;margin-left:-19.5px;width:39px">
 			<p class="g-pstyle0">Estados Unidos</p>
 		</div>
@@ -116,7 +116,7 @@
 	
 	<div id="g-ai2html-graphic-mobile375" class="g-artboard" style="width:375px;height:514.508908783366px" data-aspect-ratio="0.729" data-min-width="375" data-max-width="779">
 <div></div>
-		<img id="g-ai2html-graphic-mobile375-img" class="g-ai2html-graphic-mobile375-img g-aiImg" alt="" src="./static/media/ai2html-graphic-mobile375.4dc2c550.png"/>
+		<img id="g-ai2html-graphic-mobile375-img" class="g-ai2html-graphic-mobile375-img g-aiImg" alt="" src="https://ix.cnn.io/dailygraphics/graphics/20231128-iowa-missing-person/static/media/ai2html-graphic-mobile375.4dc2c550.png"/>
 		<div id="g-ai1-1" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:10.365%;margin-top:-8.3px;left:67.8332%;margin-left:-19.5px;width:39px">
 			<p class="g-pstyle0">Estados Unidos</p>
 		</div>
@@ -172,7 +172,7 @@
 	
 	<div id="g-ai2html-graphic-desktop" class="g-artboard" style="width:780px;height:542.460928227809px" data-aspect-ratio="1.438" data-min-width="780">
 <div></div>
-		<img id="g-ai2html-graphic-desktop-img" class="g-ai2html-graphic-desktop-img g-aiImg" alt="" src="./static/media/ai2html-graphic-desktop.860d2229.png"/>
+		<img id="g-ai2html-graphic-desktop-img" class="g-ai2html-graphic-desktop-img g-aiImg" alt="" src="https://ix.cnn.io/dailygraphics/graphics/20231128-iowa-missing-person/static/media/ai2html-graphic-desktop.860d2229.png"/>
 		<div id="g-ai2-1" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:14.2039%;margin-top:-10.1px;left:76.3382%;margin-left:-21px;width:42px">
 			<p class="g-pstyle0">Estados Unidos</p>
 		</div>
@@ -237,7 +237,7 @@
 
         <div id="footer">
             <p class="footnote">  </p>
-            <p class="source">>Fonte: Depoimentos de testemunhas citados num relatório da polícia de West Des Moines</p>
+            <p class="source">Fonte: Depoimentos de testemunhas citados num relatório da polícia de West Des Moines</p>
             <p class="credit">Grafismo: Rachel Wilson, CNN</p>
         </div>
 
