--- a/iowa.html
+++ b/iowa.html
@@ -94,7 +94,7 @@
 		<div id="g-ai0-11" class="g-text-shadow g-aiAbs g-aiPointText" style="top:68.3285%;margin-top:-20.8px;left:1.0807%;width:72px">
 			<p class="g-pstyle7">casa de</p>
 			<p class="g-pstyle7">Johnny</p>
-			<p class="g-pstyle7">Gosch&rsquo;s </p>
+			<p class="g-pstyle7">Gosch </p>
 		</div>
 		<div id="g-ai0-12" class="g-numberdots g-aiAbs g-aiPointText" style="top:66.5214%;margin-top:-8.6px;left:37.7428%;margin-left:-15.5px;width:31px">
 			<p class="g-pstyle6">2</p>
@@ -153,7 +153,7 @@
 		<div id="g-ai1-12" class="g-text-shadow g-aiAbs g-aiPointText" style="top:67.9928%;margin-top:-20.8px;left:2.4301%;width:72px">
 			<p class="g-pstyle7">casa de </p>
 			<p class="g-pstyle7">Johnny</p>
-			<p class="g-pstyle7">Gosch&rsquo;s </p>
+			<p class="g-pstyle7">Gosch </p>
 		</div>
 		<div id="Near_the_newspaper_drop_site_multiple" class="g-text-shadow g-aiAbs" style="top:74.0512%;left:3.1157%;width:45.6%">
 			<p class="g-pstyle4">Por volta das 6:00, perto do local de entrega dos jornais, várias testemunhas afirmam ter visto um homem estranho num carro azul a parar para pedir informações.</p>
@@ -208,7 +208,7 @@
 			<p class="g-pstyle7">1</p>
 		</div>
 		<div id="g-ai2-12" class="g-text-shadow g-aiAbs g-aiPointText" style="top:69.2822%;margin-top:-7.8px;left:21.1868%;width:149px">
-			<p class="g-pstyle8">Casa de Johnny Gosch&rsquo;s </p>
+			<p class="g-pstyle8">Casa de Johnny Gosch </p>
 		</div>
 		<div id="g-ai2-13" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:73.2457%;margin-top:-8.3px;left:54.6397%;width:98px">
 			<p class="g-pstyle1">Ashworth Road</p>
