--- a/iowa.html
+++ b/iowa.html
@@ -106,7 +106,7 @@
 			<p class="g-pstyle4">Around 6 a.m. near the newspaper drop site, multiple witnesses report seeing a strange man in a blue car stopping to ask for directions.</p>
 		</div>
 		<div id="g-ai0-15" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:93.5696%;margin-top:-6.4px;left:2.4724%;width:59px">
-			<p class="g-pstyle8">183 metros</p>
+			<p class="g-pstyle8">600 pés</p>
 		</div>
 		<div id="g-ai0-16" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:97.2701%;margin-top:-6.4px;left:2.4364%;width:72px">
 			<p class="g-pstyle8">200 metros</p>
@@ -162,7 +162,7 @@
 			<p class="g-pstyle4">Pouco depois das 7:45, o pai de Johnny encontra a carrinha do filho cheia de jornais não entregues. Ninguém sabe onde está Johnny</p>
 		</div>
 		<div id="g-ai1-15" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:93.3762%;margin-top:-6.4px;left:3.4453%;width:59px">
-			<p class="g-pstyle8">183 metros</p>
+			<p class="g-pstyle8">600 pés</p>
 		</div>
 		<div id="g-ai1-16" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:97.069%;margin-top:-6.4px;left:3.4146%;width:72px">
 			<p class="g-pstyle8">200 metros</p>
@@ -223,7 +223,7 @@
 			<p class="g-pstyle6">Pouco depois das 7:45, o pai de Johnny encontra a carrinha do filho cheia de jornais não entregues. Ninguém sabe onde está Johnny</p>
 		</div>
 		<div id="g-ai2-17" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:92.4893%;margin-top:-7.7px;left:2.0199%;width:63px">
-			<p class="g-pstyle9">183 metros</p>
+			<p class="g-pstyle9">600 pés</p>
 		</div>
 		<div id="g-ai2-18" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:96.3605%;margin-top:-7.7px;left:2.0031%;width:79px">
 			<p class="g-pstyle9">200 metros</p>
